Fix for overflow scroll problem
A quick little fix for this vexing problem. Initial testing is positive.

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -8,6 +8,12 @@ body{
     overflow-x:hidden;
 }
 
+@media (max-width: 767px) {
+    html {
+        overflow-x:hidden;
+    }
+}
+
 hr {
     max-width: 100px;
     height: 2px;
